<resources>

    <string name="app_name">Cycle Comp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="main">Main</string>
    <string name="tools">Tools</string>
    <string name="profile">Profile</string>
    <string name="displays">Displays</string>
    <string name="route">Route</string>
    <string name="settings">Settings</string>
    <string name="emulator">Emulator</string>
    <string name="display">Display</string>
    <string name="control">Control</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="vk">   VK   </string>
    <string name="google"> G+ </string>
    <string name="user">User</string>
    <string name="user_email">android.studio@android.com</string>
    <string name="friends">Friends</string>
    <string name="about">About</string>
    <string name="gps">GPS</string>
    <string name="text_aim">Aim</string>

    <!-- Preferences -->
    <string name="category_cycle_comp">Cycle computer</string>
    <string name="weather">Weather notification</string>
    <string name="category_app">Application</string>
    <string name="gps_state_title">GPS State</string>
    <string name="summary_gps_state">GPS module state</string>
    <string name="summary_device">connected</string>
    <string name="title_theme">Theme</string>
    <string name="theme_sum">The theme of application</string>
    <string name="profile_image_user">profile_image_user</string>
    <string name="start">Start</string>
    <string name="title_distance">Distance</string>
    <string name="title_autocorrect">Autocorrect</string>
    <string name="title_wheel_radius">Wheel radius</string>
    <string name="summary_distance">Total trip distance</string>
    <string name="summary_autocorrect">Correct wheel radius with GPS using</string>
    <string name="summary_wheel_radius">24.5</string>
    <string name="title_measure_unit">Measure units</string>
    <string name="summary_measure_unit">Measure units for speed</string>

    <string-array name="themes_list">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <!-- Dialogs -->
    <string name="dialog_bt_title">Bluetooth</string>
    <string name="disconnect_message">Do you want to disconnect device from your phone?</string>
    <string name="title_disconnect_message">Dismiss connection</string>
    <string name="dialog_err_title_ops">Oooops!</string>
    <string name="dialog_err_message_ops">Something went wrong…</string>
    <string name="dialog_err_bug_report">Bug report</string>
    <string name="dialog_bt_message_enable">This application requires bluetooth.\nDo you want to enable it?</string>
    <string name="dialog_bt_message_switching">Switching bluetooth</string>
    <string name="dialog_bt_message_not_support">Your device does not support bluetooth 4.0 LE!</string>
    <string name="demo_first_name">CycleComp</string>
    <string name="dialog_auth_title">Authorization</string>
    <string name="demo_second_name">User</string>
    <string name="text_current_distance">Current distance:</string>
    <string name="demo_speed_value">0.0</string>
    <string name="demo_speed_mes">km</string>
    <string name="text_trip_time">trip</string>
    <string name="text_trip_distance">distance</string>
    <string name="text_calories">burned</string>
    <string name="text_trip_time_val">0:00:00</string>
    <string name="text_distance_val" formatted="false">%0.2f %s</string>
    <string name="text_calories_val">0</string>
    <string name="icon_bike">icon bike</string>
    <string name="developers">Разработчики:\n Владислав Кожушко \n Дмитрий Цыганов \n Лысак Павел</string>


    <!-- Notifications -->

    <string name="x_axis">X</string>
    <string name="y_axis">Y</string>
    <string name="battery">% Battery</string>
    <string name="speed_units">km/h</string>
    <string name="speed_value">23.7</string>
    <string name="trip">Trip</string>
    <string name="trip_time">1:58:27</string>
    <string name="title_app_mode">Application Mode</string>
    <string name="title_device">Cycle Computer</string>
    <string name="mode_client">Client</string>
    <string name="mode_emulator">Emulator</string>
    <string name="measure_km">km/h</string>
    <string name="measure_mile">m/h</string>


    <string-array name="measure_units">
        <item>@string/measure_km</item>
        <item>@string/measure_mile</item>
    </string-array>

    <string name="dev_vlad">Vladislav Kozhushko</string>
    <string name="dev_dima">Dmitry Tsiganov</string>
    <string name="dev_pasha">Pavel Lysak</string>
    <string name="text_devis">Ride with your friedns!</string>
    <string name="text_sign_in_with">Sign in with</string>
    <string name="notification_weather_title">Want to go for a ride?</string>
    <string name="notification_weather_text">It\'s warm and sunny, perfect day for a bike ride.</string>
    <string name="logout">Logout</string>
    <string name="need_connect_device">Please, connect to Cycle Computer</string>
    <string name="trainings">Trainings</string>
    <string name="parlays">Parlays</string>

</resources>
