<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_main"
            android:icon="@mipmap/ic_main"
            android:title="@string/main" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@mipmap/ic_friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_route"
            android:icon="@mipmap/ic_route"
            android:title="@string/route" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_tools"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/about" />
    </group>

</menu>
