<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.SignInActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_logo" />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_devis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/text_devis"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_sign_in_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_devis"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/text_sign_in_with"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_sign_in_with"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <!--        <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/button_google"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/google" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="0dp">
                </View>-->

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/button_vk"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@mipmap/ic_vk" />
    </LinearLayout>
</RelativeLayout>
